feat: 적금 추천 응답 구조 개선 및 에러 핸들링 강화